@@ -1,6 +1,8 @@
 ChangeLog
 ==========
 
+- add exclude option to npg_rsync_pacbio_runfolders.sh shell script
+
 release 3.19
 - add basic shell script npg_rsync_pacbio_runfolders.sh to take rsync copies of
   runfolders (for disaster recovery) and add missing standard compile test for perl
